# tryffle

./: .gitignore  Makefile  README.md  env.tpl
inspyration/: Dockerfile  docker-compose.yml  pyproject.toml
tryffle/: .dockerignore  Dockerfile  Dockerfile.init_trgrm  Makefile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  truc.txt  vite.config.js
tryffle/lists/: serializers.py  urls.py  views.py
tryffle/media/uploads/: README.md
tryffle/nginx/: nginx.conf
tryffle/static/: manifest.json
tryffle/static/js/: app.js  inertia.js  main.js
tryffle/static/js/Pages/: DefaultLayout.vue  Home.vue  TestView.vue
tryffle/static/src/js/: main.js
tryffle/static/src/js/pages/: Basic_List.vue  Document.vue  Page_Detail.vue  Pages.vue  Real_List.vue  Search.vue  Test.vue  Trigramme_Search.vue
tryffle/templates/: base.html  documents.html  index.html  page-detail.html  pages.html
tryffle/tryffle/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tryffle/tryffleApp/: admin.py  apps.py  models.py
tryffle/tryffleApp/migrations/: 0001_initial.py
tryffle/tryffleApp/templates/tryffleApp/: base.html
tryffle/uploaded_pdf/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  signal.py  tasks.py  urls.py  views.py
tryffle/uploaded_pdf/migrations/: 0001_initial.py  0002_alter_documentpdf_date_alter_documentpdf_page_number_and_more.py  0002_page_document_alter_documentpdf_date_and_more.py  0003_alter_page_image_alter_page_text.py  0004_page_file_path.py  0005_alter_documentpdf_date_alter_page_file_path.py
tryffle/uploaded_pdf/templates/: pages.html
tryffle/uploaded_pdf/templates/tryffleApp/: base.html
tryffle/uploaded_pdf/templates/uploaded_pdf/: document_list.html
tryffle/uploaded_pdf/tests/: test_models.py  test_serializer.py  test_signals.py
