[tool.poetry]
name = "inspyration-solar"
version = "0.1.0"
description = "Solar project"
authors = ["Sébastien CHAZALLET"]

[tool.poetry.dependencies]
python = "^3.11"
factory-boy = "^3.2.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.0"
pytest-sugar = "^0.9.5"
requests = "^2.28.1"
PyYAML = "^6.0"
jsonschema = "^4.16.0"
psycopg2-binary = "^2.9.4"
django-cryptography = "^1.1"
python-dateutil = "^2.8.2"
pyexcel-xls = "^0.7.0"
pyexcel-xlsx = "^0.6.0"
django-extensions = "^3.2.1"
selenium = "^4.5.0"
tox = "^3.26.0"
coverage = "^6.5.0"
requests-mock = "^1.10.0"
coloredlog = "^0.2.5"
logging-json = "^0.2.1"
django-adminlte3 = "^0.1.6"
django-bootstrap5 = "^22.1"
crispy-bootstrap5 = "^0.7"
django-crispy-forms = "^1.14.0"
django-polymorphic = "^3.1.0"
channels = "^3.0.5"
django-smart-selects = "^1.6.0"
django_renderpdf = "^3.0.1"
django-baton = "^2.5.1"

[tool.poetry.dev-dependencies]
web-pdb = "^1.5.7"
pylama = "^8.4.1"
django-debug-toolbar = "^3.7.0"
django-silk = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
