[tool.poetry]
name = "tryffle"
version = "0.1.0"
description = "Finf the truffle you seek in a forest of document"
authors = ["Erwan Vinet <erwanvinet034@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5"
djangorestframework = "^3.15.1"
PyPDF2 = "^3.0.1"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
